--- a/final report/sigproc.bib
+++ b/final report/sigproc.bib
@@ -4,6 +4,37 @@
 	author = {Website}
 }
 
+@Misc{projectgithub,
+	howpublished = {\url{https://github.com/alextsil/twitter-topic-detection-and-analysis/}},
+	title = {Project Github},
+	author = {Github}
+}
+
+@Misc{tweepy,
+	howpublished = {\url{http://www.tweepy.org/}},
+	title = {Tweepy},
+	author = {Tweepy}
+}
+
+@Misc{nltk,
+	howpublished = {\url{http://www.nltk.org/}},
+	title = {nltk},
+	author = {nltk}
+}
+
+@Misc{pandas,
+	howpublished = {\url{http://pandas.pydata.org/}},
+	title = {pandas},
+	author = {pandas}
+}
+
+@Misc{d3js,
+	howpublished = {\url{https://d3js.org/}},
+	title = {d3js},
+	author = {d3js}
+}
+
+
 @inproceedings{petrovic2010streaming,
 	title={Streaming first story detection with application to twitter},
 	author={Petrovi{\'c}, Sa{\v{s}}a and Osborne, Miles and Lavrenko, Victor},
