--- a/final report/sigproc.bib
+++ b/final report/sigproc.bib
@@ -6,7 +6,7 @@
 
 @Misc{projectgithub,
 	howpublished = {\url{https://github.com/alextsil/twitter-topic-detection-and-analysis/}},
-	title = {Project Github},
+	title = {Project repository},
 	author = {Github}
 }
 
@@ -34,6 +34,11 @@
 	author = {d3js}
 }
 
+@Misc{opinion,
+	howpublished = {\url{https://github.com/lefterisKl/Opinion-Mining/}},
+	title = {Opinion Mining tool},
+	author = {Github}
+}
 
 @inproceedings{petrovic2010streaming,
 	title={Streaming first story detection with application to twitter},
