--- a/final report/sigproc.bib
+++ b/final report/sigproc.bib
@@ -1,43 +1,49 @@
 @Misc{projectwebsite,
 	howpublished = {\url{http://snf-755277.vm.okeanos.grnet.gr/}},
-	title = {Project website},
-	author = {Website}
+	title = {Website of the project},
+	key = {1}
 }
 
 @Misc{projectgithub,
 	howpublished = {\url{https://github.com/alextsil/twitter-topic-detection-and-analysis/}},
-	title = {Project repository},
-	author = {Github}
+	title = {Project repository on Github},
+	key = {2}
 }
 
 @Misc{tweepy,
 	howpublished = {\url{http://www.tweepy.org/}},
 	title = {Tweepy},
-	author = {Tweepy}
+	key = {7}
 }
 
 @Misc{nltk,
 	howpublished = {\url{http://www.nltk.org/}},
-	title = {nltk},
-	author = {nltk}
+	title = {NLTK},
+	key = {4}
 }
 
 @Misc{pandas,
 	howpublished = {\url{http://pandas.pydata.org/}},
 	title = {pandas},
-	author = {pandas}
+	key = {5}
 }
 
 @Misc{d3js,
 	howpublished = {\url{https://d3js.org/}},
 	title = {d3js},
-	author = {d3js}
+	key = {6}
 }
 
 @Misc{opinion,
 	howpublished = {\url{https://github.com/lefterisKl/Opinion-Mining/}},
 	title = {Opinion Mining tool},
-	author = {Github}
+	key = {3}
+}
+
+@Misc{imdb,
+	howpublished = {\url{https://http://www.imdb.com/}},
+	title = {IMDb},
+	key = {8}
 }
 
 @inproceedings{petrovic2010streaming,
