--- a/final report/document.tex
+++ b/final report/document.tex
@@ -78,17 +78,17 @@ The Opinion-Mining tool\cite{opinion} we used implements a SVM classifier that c
 \section*{Location Prediction}
 
 \subsection*{Geoinference}
-Twitter provides the users with the ability to infer the location either defining a place the user is or enabling the location, where the position of the user is more accurate. The generic approach started by gathering through a query to our database both categories' users. We excluded users with minor place inference, due to shortage of information that will lead to a correct prediction. The main idea was to form a model to foresee some of those users' location.
+Twitter provides the users the ability to infer the location either by defining the place the user is or by enabling the location, where the position of the user is more accurate. The generic approach started by gathering, through a query to our database, both users' categories. We excluded the users with minor place inference, due to the lack of information that could lead to a correct prediction. The main idea was to form a model to foresee some of those users' location.
 
 \subsection*{Dataset Creation}
-We selected to create 4 different datasets having the ability to compare the results. Initially we collected users' tweets having as a criterion a specific number(20) of the most inferenced locations. We noticed that all was in USA. The second criterion was the number of users for each locality. Based on the second, we formulated the 4 different datasets. 
+We created 4 different datasets so we can have the ability to compare the results. Initially we collected users' tweets having as a criterion a specific number (i.e 20) of the most inferenced locations. We noticed that all of them were in the USA. The second criterion was the number of users for each locality. Based on the second, we formulated the 4 different datasets. 
 
 \subsection*{Implementation}
-The methodology is based on a simple technique. For every user we calculated the frequency of every location's reference in his/her tweets. The highest number was given as a prediction. We consulted that a user is most probable to cite his/her city mroe frequent than every other place. The results was quite encouraging.
+The methodology is based on a simple technique. For every user we calculated the frequency of every location's reference in his/her tweets. The highest number was given as a prediction. We consulted that a user is most probable to cite his/her city more frequent than any other place. The results were quite encouraging.
 
 \chapter{Framework description}
 \label{chap:framework}
-The software created was split into modules to allow for independent, on-demand functionality. A user can easily assemble a system from these independent modules based on their needs. The complete repository can be found in the project's Github page \cite{projectgithub}.
+The software created was split into modules to allow independent, on-demand functionality. A user can easily assemble a system from these independent modules based on their needs. The complete repository can be found in the project's Github page \cite{projectgithub}.
 \subsubsection*{Getting the tweets}
 To begin with, Python and Tweepy \cite{tweepy} were used to access the Twitter API as efficiently as possible. The incoming stream was filter using the keyword "trump" and was directly saved into a MongoDb instance.
 
@@ -102,7 +102,7 @@ The pandas \cite{pandas} library was used to resample the time and allow tweet b
 After detecting the top event that occurred during the time the tweets were crawled, the dataset was filtered in order to get only the tweets, without the retweets, containing hashtags related to the emerging event (e.g \#parisagreement, \#climatechange). These specific tweets were written to text files so they can be imported to the Opinion-Mining tool\cite{opinion} for sentiment prediction.
 
 \subsubsection*{Geoprediction datasets}
-We mentioned the use of 4 different datasets. Now, we are going to explain the way of forming the datasets. The first step was to calculate the most refered places. From those we selected the top-20 cities for the first, third and fourth dataset. We excluded places such as states or countries. The second step was the selection of a specific number of unique users for each dataset. The numbers was 20, 15, 25, 30 for each corresponding dataset. At every time we picked up the 200 latest tweets for each user. The algorithm was applied in each dataset.
+We mentioned the use of 4 different datasets. Now, we are going to explain the way of forming the datasets. The first step was to calculate the most referenced places. From those we selected the top-20 cities for the first, third and fourth dataset. We excluded places such as states or countries. The second step was the selection of a specific number of unique users for each dataset. The numbers were 20, 15, 25, 30 for each corresponding dataset. Every time we picked the 200 latest tweets for each user. The algorithm was applied in every dataset.
 
 \subsubsection{Opinion-Mining tool}
 The tool uses a custom lexicon implementation that is shown in figure \ref{fig:opinion}. The training set used includes a total of 25k labeled reviews taken from the published dataset of IMDb \cite{imdb}. Half of them are positive and the other half are negative.
@@ -126,9 +126,9 @@ The model uses a SVM classifier with SGD tuning for prediction. The vectors are 
 
 \subsubsection*{Geoprediction Approach}
 \begin{enumerate}
-	\item Tokenization: Collecting the texts of every user applying tokenization. Creation a list of tokens for each user.
-	\item Removal of stopwords: Removing of some standard words.
-	\item Calculation of the frequencies: The most frequent word is given as a prediction. The algorithm counts also the appearance of a word that is included in a word, such as \#prayforparis.
+	\item Tokenization: Collect the tweets of every user and create a list of tokens for each user.
+	\item Stopwords removal.
+	\item Frequencies calculation: The most frequent word is given as a prediction. The algorithm also counts words that are included in hashtags (e.g paris in \#prayforparis).
 \end{enumerate}
 
 \chapter{Results}
@@ -193,7 +193,7 @@ The predictions of the sentiments of the tweets are presented using a pie chart 
 \end{figure}
 
 \section*{Location Prediction}
-The chosen type of statistics for presenting the results for Geoprediction experiments is the bar plot. The first chart represents the top referenced locations. The second one the top 20 locations for our experiments. The last bar chart depicts the accuracies of the models for every dataset. The metric for the evaluation of our implementation is the accuracy. The best accuracy was achieved by the second dataset, in which the number of users and the number of cities are less(15 for cities and 15 for users/city) than any other case.
+The chosen representation type for the results of Geoprediction experiments is the bar plot. The first chart represents the top referenced locations. The second one the top 20 locations for our experiments. The last bar chart depicts the accuracies of the models for every dataset. The metric used for the evaluation of our implementation is accuracy. The highest accuracy was achieved by the second dataset, in which the number of users and the number of cities is less (i.e 15 for cities and 15 for users/city) than in any other case.
 
 \begin{figure}[H]
 	\centering
