--- a/final report/document.tex
+++ b/final report/document.tex
@@ -67,7 +67,7 @@ We now have a pool of tweets that might contain information about an event. The 
 \section*{Sentiment Analysis}
 
 \subsection*{Methodology}
-For the prediction of the sentiments of the tweets gathered, we used a supervised method. In particular, we used a machine-learning technique. The tool we used for the predictions was implemented for the needs of a course in the previous semester. Since we had put a lot of effort in its implementation and it is a creation of our personal hard work we decided to use it for this assignment too.
+For the prediction of the sentiments of the tweets gathered, we used a supervised method. In particular, we used a machine-learning technique. The tool we used for the predictions was implemented for the needs of a course in the previous semester. Since we had put a lot of effort in its implementation and it is a creation of our personal work we decided to use it for this assignment too.
 
 \subsubsection*{Selecting tweets from the dataset}
 All the tweets related to the top emerging event were isolated and written to different text files. These are all the tweets that include hashtags related to the event (e.g \#parisagreement). All the retweets  were removed. 
@@ -193,7 +193,7 @@ The predictions of the sentiments of the tweets are presented using a pie chart 
 \end{figure}
 
 \section*{Location Prediction}
-The chosen representation type for the results of Geoprediction experiments is the bar plot. The first chart represents the top referenced locations. The second one the top 20 locations for our experiments. The last bar chart depicts the accuracies of the models for every dataset. The metric used for the evaluation of our implementation is accuracy. The highest accuracy was achieved by the second dataset, in which the number of users and the number of cities is less (i.e 15 for cities and 15 for users/city) than in any other case.
+The chosen representation type for the results of Geoprediction experiments is the bar plot. The first chart represents the top referenced locations. The second one the top 20 locations for our experiments. The last bar chart depicts the accuracies of the models for every dataset. The metric used for the evaluation of our implementation is accuracy. The highest accuracy was achieved by the second dataset, in which the number of users and the number of cities is smaller (i.e 15 for cities and 15 for users/city) than in any other case.
 
 \begin{figure}[H]
 	\centering
