--- a/final report/document.tex
+++ b/final report/document.tex
@@ -4,7 +4,7 @@
 \usepackage[margin=1.1in]{geometry}
 \usepackage{booktabs}
 \usepackage{graphicx}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{kpfonts}
 \usepackage{url}
 \usepackage[cc]{titlepic} 
